--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,6 +2,18 @@
 
 <ul>
   {{#each burgers}}
-    <li>{{burger_name}}</li>
+    {{#unless devoured}}
+      {{> burgers/burger-block devour=true}}
+    {{/unless}}
+  {{/each}}
+</ul>
+
+<h2>Burgers that have been devoured!</h2>
+
+<ul>
+  {{#each burgers}}
+    {{#if devoured}}
+      {{> burgers/burger-block devour=false}}
+    {{/if}}
   {{/each}}
 </ul>
