only show 'devour' button if devour=false

--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,8 +1,6 @@
 <li>
 	{{burger_name}}
-	<button>
-		{{#if devour}}LETS SEE WHAT HAPPENS{{else}}IDK{{/if}}
-	</button>
-
-	<button>DELETE!</button>
+		{{#if devour}}
+			<button>EAT ME!</button>
+		{{/if}}
 </li>
