created event listener for devour button in burgers.js

--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,6 +1,6 @@
 <li>
 	{{burger_name}}
 		{{#if devour}}
-			<button>EAT ME!</button>
+			<button class="eat-burger" data-id="{{id}}" data-devoured="{{devour}}">EAT ME!</button>
 		{{/if}}
 </li>
