--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,3 +17,14 @@
     {{/if}}
   {{/each}}
 </ul>
+
+<h2>Add a Burger</h2>
+<form class="create-form">
+
+  <div class="form-group">
+    <label for="ca">Burg Name:</label>
+    <input type="text" id="ca" name="name">
+  </div>
+
+  <button type="submit">Add Burger</button>
+</form>
