--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,29 +1,37 @@
-<h1>Eat Da Burger</h1>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4 text-center">Eat Da Burger</h1>
+  </div>
+</div>
 
-<ul>
-  {{#each burgers}}
-    {{#unless devoured}}
-      {{> burgers/burger-block devour=true}}
-    {{/unless}}
-  {{/each}}
-</ul>
+<div class="row">
+    <div class="col-4">
+      <ul class="list-group">
+        {{#each burgers}}
+          {{#unless devoured}}
+            {{> burgers/burger-block devour=true}}
+          {{/unless}}
+        {{/each}}
+      </ul>
+    </div>
 
-<h2>Burgers that have been devoured!</h2>
-
-<ul>
-  {{#each burgers}}
-    {{#if devoured}}
-      {{> burgers/burger-block devour=false}}
-    {{/if}}
-  {{/each}}
-</ul>
+    <div class="col-4">
+      <ul class="list-group disabled">
+        {{#each burgers}}
+          {{#if devoured}}
+            {{> burgers/burger-block devour=false}}
+          {{/if}}
+        {{/each}}
+      </ul>
+      </div>
+</div>
 
 <h2>Add a Burger</h2>
-<form class="create-form">
+<form class="create-form container">
 
   <div class="form-group">
-    <label for="ca">Burg Name:</label>
-    <input type="text" id="ca" name="name">
+    <label for="ca">Burger Name:</label>
+    <textarea class="form-control" id="ca" rows="3"></textarea>
   </div>
 
   <button type="submit">Add Burger</button>
