added burger image

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,7 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
     <h1 class="display-4 text-center">Eat Da Burger</h1>
+    <img src="burgerImage.png" alt="Burger image">
   </div>
 </div>
 
