fixed image and list alignment

--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,6 +1,4 @@
 <li class="list-group-item p-2">
-	{{burger_name}}
-		{{#if devour}}
-			<button class="eat-burger btn btn-light" data-id="{{id}}" data-devoured="{{devour}}">EAT ME!</button>
-		{{/if}}
+    {{burger_name}} {{#if devour}}
+    <button class="eat-burger btn btn-light" data-id="{{id}}" data-devoured="{{devour}}">EAT ME!</button> {{/if}}
 </li>
