--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,39 +1,32 @@
-<div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h1 class="display-4 text-center">Eat Da Burger</h1>
-    <img src="burgerImage.png" alt="Burger image">
-  </div>
-</div>
-
-<div class="row">
-    <div class="col-4">
-      <ul class="list-group">
-        {{#each burgers}}
-          {{#unless devoured}}
-            {{> burgers/burger-block devour=true}}
-          {{/unless}}
-        {{/each}}
-      </ul>
+<div class="container">
+    <div class="jumbotron jumbotron-fluid text-center">
+        <h1 class="display-4">Eat Da Burger</h1>
+        <img class="align-items-center" src="burgerImage.png" alt="Burger image">
     </div>
 
-    <div class="col-4">
-      <ul class="list-group disabled">
-        {{#each burgers}}
-          {{#if devoured}}
-            {{> burgers/burger-block devour=false}}
-          {{/if}}
-        {{/each}}
-      </ul>
-      </div>
+    <div class="row">
+        <div class="col-6">
+            <ul class="list-group">
+                {{#each burgers}} {{#unless devoured}} {{> burgers/burger-block devour=true}} {{/unless}} {{/each}}
+            </ul>
+        </div>
+
+        <div class="col-6">
+            <ul class="list-group disabled">
+                {{#each burgers}} {{#if devoured}} {{> burgers/burger-block devour=false}} {{/if}} {{/each}}
+            </ul>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-6">
+            <form class="create-form">
+                <div class="form-group">
+                    <label for="ca">Add a Burger</label>
+                    <textarea class="form-control" id="ca" rows="3"></textarea>
+                </div>
+
+                <button type="submit">Add Burger</button>
+            </form>
+        </div>
+    </div>
 </div>
-
-<h2>Add a Burger</h2>
-<form class="create-form container">
-
-  <div class="form-group">
-    <label for="ca">Burger Name:</label>
-    <textarea class="form-control" id="ca" rows="3"></textarea>
-  </div>
-
-  <button type="submit">Add Burger</button>
-</form>
