--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="jumbotron jumbotron-fluid text-center">
-        <h1 class="display-4">Eat Da Burger</h1>
-        <img class="align-items-center" src="burgerImage.png" alt="Burger image">
+      <img src="burgerImage.png" alt="Burger image">
+      <h1 class="display-4">Eat Da Burger</h1>
     </div>
 
     <div class="row">
@@ -17,9 +17,9 @@
             </ul>
         </div>
     </div>
-    <div class="row">
-        <div class="col-6">
-            <form class="create-form">
+    <div class="container row">
+        <div class="col-12">
+            <form class="create-form text-center">
                 <div class="form-group">
                     <label for="ca">Add a Burger</label>
                     <textarea class="form-control" id="ca" rows="3"></textarea>
